--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rose-she/litchily.git"
+    "url": "https://github.com/rose-she/litchily"
   },
   "devDependencies": {
     "standard-version": "^9.3.2"
