--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "litchily",
-  "version": "1.0.6-0",
+  "version": "1.0.6",
   "description": "this is a test",
   "main": "index.js",
   "scripts": {
